# bazel_rules_js_vitest_demo

./: BUILD.bazel  README.md  global_vite.config.ts  package.json  pnpm-lock.yaml  static_vite.config.ts  tsconfig.config.json
